--- a/index.html
+++ b/index.html
@@ -7,98 +7,111 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/ionicons.css">
-    <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
     <title>Static Comp 2 - Nick Svetnicka</title>
   </head>
   <body>
 
+    <div class="body-wrapper">
+
     <header class="header-section">
-      <p class="text-title">Breaking Bad</p>
-      <p class="text-subtitle">
-        <span><i class="icon ion-ios-pulse-strong bigly"></i> check vitals</span>
-        <span><i class="icon ion-erlenmeyer-flask bigly"></i> elixirs and schematics</span>
-        <span><i class="icon ion-nuclear bigly"></i> danger zone</span>
-      </p>
+
+      <div class="header-top">
+        <p class="text-menu">
+          <span class="text-subtitle"><i class="icon ion-ios-pulse-strong menu-pre"></i> check vitals <i class="icon ion-erlenmeyer-flask menu-post"></i></span>
+        </p>
+      </div>
+
+      <div class="header-bot">
+        <p class="text-title">Breaking Bad</p>
+        <p class="text-subtitle">
+          <span><i class="icon ion-ios-pulse-strong bigly"></i> check vitals</span>
+          <span><i class="icon ion-erlenmeyer-flask bigly"></i> elixirs and schematics</span>
+          <span><i class="icon ion-nuclear bigly"></i> danger zone</span>
+        </p>
+      </div>
 
     </header>
 
     <div class="main-section">
 
-    </div>
+    <p class="main-section-title">Characters</p>
+
+    <div class="card-wrapper">
 
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/WalterWhite.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/WalterWhite.png" alt="Walter White" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/GustavoFring.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/GustavoFring.png" alt="Gustavo Fring" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/MarieSchrader.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/MarieSchrader.png" alt="Marie Schrader" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/SaulGoodman.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/SaulGoodman.png" alt="Saul Goodman" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/SkylerWhite.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/SkylerWhite.png" alt="Skyler White" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/HectorSalamanca.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/HectorSalamanca.png" alt="Hector 'Tio' Salamanca" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/HankSchrader.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/HankSchrader.png" alt="Hank Schrader" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/JessePinkman.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/JessePinkman.png" alt="Jesse Pinkman" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/SkinnyPete.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/SkinnyPete.png" alt="Skinny Pete" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div>
-  			<figure class="bg-tan avatar"><img src="images/MikeEhrmantraut.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/MikeEhrmantraut.png" alt="Mike Ehrmantraut" /></figure>
   		</div>
     </div>
 
     <div class="card">
   		<div class="avatar">
-  			<figure class="bg-tan avatar"><img src="images/Badger.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/Badger.png" alt="Brandon 'Badger' Mayhew" /></figure>
   		</div>
     </div>
 
     <div class="card">
-  		<div class="avatar">
+  		<div class="relative">
         <p class="views-big">LEVEL</p>
-  			<figure class="bg-tan"><img src="images/GaleBoetticher.png" /></figure>
+  			<figure class="bg-tan avatar"><img src="images/GaleBoetticher.png" alt="Gale Boetticher" /></figure>
         <div class="bio">
           PERSONAL VIDEOS
           <p>this is some sub text</p>
@@ -107,11 +120,20 @@
     </div>
 
 
+  </div>
+
+  </div>
+
+
     <!-- <div class="hover05">
       <figure class="avatar">
         <img class="bg-tan" src="images/WalterWhite.png" alt="Walter White">
       </figure>
     </div> -->
+
+
+  </div>
+
 
   </body>
 </html>
