--- a/index.html
+++ b/index.html
@@ -41,82 +41,399 @@
 
     <div class="card-wrapper">
 
-
+  
     <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/WalterWhite.png" alt="Walter White" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/GustavoFring.png" alt="Gustavo Fring" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/MarieSchrader.png" alt="Marie Schrader" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/SaulGoodman.png" alt="Saul Goodman" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/SkylerWhite.png" alt="Skyler White" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/HectorSalamanca.png" alt="Hector 'Tio' Salamanca" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/HankSchrader.png" alt="Hank Schrader" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/JessePinkman.png" alt="Jesse Pinkman" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/SkinnyPete.png" alt="Skinny Pete" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div>
-  			<figure class="bg-tan avatar"><img src="images/MikeEhrmantraut.png" alt="Mike Ehrmantraut" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div class="avatar">
-  			<figure class="bg-tan avatar"><img src="images/Badger.png" alt="Brandon 'Badger' Mayhew" /></figure>
-  		</div>
-    </div>
-
-    <div class="card">
-  		<div class="relative">
-        <p class="views-big">LEVEL</p>
-  			<figure class="bg-tan avatar"><img src="images/GaleBoetticher.png" alt="Gale Boetticher" /></figure>
-        <div class="bio">
-          PERSONAL VIDEOS
-          <p>this is some sub text</p>
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/WalterWhite.png" alt="Walter White" /></figure>
         </div>
-  		</div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Walter White</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/GustavoFring.png" alt="Gustavo Fring" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Gustavo Fring</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/MarieSchrader.png" alt="Marie Schrader" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Marie Schrader</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/SaulGoodman.png" alt="Saul Goodman" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Saul Goodman</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/SkylerWhite.png" alt="Skyler White" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Skyler White</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/HectorSalamanca.png" alt="Hector 'Tio' Salamanca" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Hector 'Tio' Salamanca</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/HankSchrader.png" alt="Hank Schrader" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Hank Schrader</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/JessePinkman.png" alt="Jesse Pinkman" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Jesse Pinkman</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/SkinnyPete.png" alt="Skinny Pete" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Skinny Pete</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/MikeEhrmantraut.png" alt="Mike Ehrmantraut" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Mike Ehrmantraut</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/Badger.png" alt="Brandon 'Badger' Mayhew" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Brandon 'Badger' Mayhew</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+  		<div class="card-header">
+        <div class="card-header-info">
+            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <div class="info-rank-wrapper">
+              <p class="info-rank">RANK</p>
+              <p class="info-rank-sub">01</p>
+            </div>
+            <figure class="bg-tan avatar"><img src="images/GaleBoetticher.png" alt="Gale Boetticher" /></figure>
+        </div>
+      </div>
+      <div class="card-bio">
+        <div class="bio-section bio-a">
+          <p>Gale Boetticher</p>
+          <p>Tuesday 05/30/16 10:22am</p>
+        </div>
+        <div class="bio-section bio-b">
+          <div class="bio-shaded">
+            <p>http://www.maps.google.com/nm/abq</p>
+          </div>
+        </div>
+        <div class="bio-section bio-c">
+          <p>playlist</p>
+          <p>Another Playlist</p>
+        </div>
+        <div class="bio-section bio-d">
+          <p>attachments</p>
+          <p>03</p>
+        </div>
+      </div>
     </div>
 
 
