--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 
       <div class="header-top">
         <p class="text-menu">
-          <span class="text-subtitle"><i class="icon ion-ios-pulse-strong menu-pre"></i> check vitals <i class="icon ion-erlenmeyer-flask menu-post"></i></span>
+          <span class="text-menu-wrapper"><i class="icon ion-ios-analytics menu-pre"></i> admin login <i class="icon ion-arrow-down-b menu-post"></i></span>
         </p>
       </div>
 
       <div class="header-bot">
-        <p class="text-title">Breaking Bad</p>
+        <p class="text-title">
+          <span>Breaking Bad</span>
+          <span><img src="images/nuclear-power-big-yellow.png" alt="nuclear power icon"></span>
+        </p>
         <p class="text-subtitle">
           <span><i class="icon ion-ios-pulse-strong bigly"></i> check vitals</span>
           <span><i class="icon ion-erlenmeyer-flask bigly"></i> elixirs and schematics</span>
@@ -37,15 +40,15 @@
 
     <div class="main-section">
 
-    <p class="main-section-title">Characters</p>
+    <p class="main-section-title">Line Up</p>
 
     <div class="card-wrapper">
 
-  
+
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -78,7 +81,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -111,7 +114,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -144,7 +147,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -177,7 +180,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -210,7 +213,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -243,7 +246,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -276,7 +279,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -309,7 +312,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -342,7 +345,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -375,7 +378,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
@@ -407,7 +410,7 @@
     <div class="card">
   		<div class="card-header">
         <div class="card-header-info">
-            <p class="info-back"><img src="images/nuclear.png" alt="nuclear symbol"></p>
+            <p class="info-back"><img src="images/right-arrow.png" alt="nuclear symbol"></p>
             <div class="info-rank-wrapper">
               <p class="info-rank">RANK</p>
               <p class="info-rank-sub">01</p>
